# doty

./: README.md
cli/: Cargo.toml  README.md
cli/src/: cli.rs  features.rs  lib.rs  main.rs
cli/src/core/: error.rs  feature.rs  interactor.rs  mod.rs
cli/src/core/domain/: feature.rs  interactor.rs  mod.rs
cli/src/core/functional/: either.rs
cli/src/features/: bootstrap.rs  feature_bootstrap.rs  feature_profiles.rs  feature_sanity.rs  mod.rs
cli/tests/: cli.rs  integration_tests.rs
cli/tests/common/: mod.rs
sample/: README.md
sample/dotfiles/: symlink.dot.gitconfig  symlink.dot.vimrc  symlink.dot.zshrc
sample/dotfiles/dot.config/: symlink.chromium-flags.conf  symlink.electron-flags.conf
sample/dotfiles/dot.config/symlink.alacritty/: alacritty
sample/dotfiles/dot.config/symlink.nvim/: init.vim
sample/dotfiles/dot.config/symlink.ranger/: commands.py  rc.conf
sample/dotfiles/dot.ssh/: symlink.config
sample/dotfiles/doty/: doty.arch.toml  doty.fedora.toml  doty.toml
sample/dotfiles/shell/: aliases.zsh  plugins.zsh  variables.zsh
