[package]
name = "doty"
description = "doty is a .dotfiles Manager built with love in Rust"
authors = ["Fernando Cejas <android10@fernandocejas.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3" 