[package]
name = "doty"
description = "doty is a .dotfiles Manager built with love in Rust"
version = "0.1.0"
authors = ["Fernando Cejas <android10@fernandocejas.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
text-colorizer = "1.0.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3" 